fix: footer z-index

--- a/refactor/style.css
+++ b/refactor/style.css
@@ -1413,7 +1413,6 @@ i.ti {
   min-height: 8rem;
   align-items: center;
   justify-content: center;
-  z-index: 7;
 }
 
 .wrapper-options,
